# advent-2022

./: .gitignore  Cargo.toml  template.rs
src/: .matrix.rs.rustfmt  matrix.rs
