[package]
name = "advent-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
derivative = "2.2.0"
itertools = "0.10.5"
nom = "7.1.2"
once_cell = "1.16.0"
rayon = "1.6.1"
regex = "1.7.0"
strum = "0.24.1"


[dev-dependencies]
test-case = "2.2.2"

[profile.release]
debug = true
